--- a/main.tex
+++ b/main.tex
@@ -27,19 +27,19 @@
 \IEEEauthorblockA{\\Kommunikationsnetze 1\\ Technische Universit\"at Darmstadt\\} }
 \maketitle 
 \begin{abstract} 
-Diese Arbeit behandelt das Thema Point-to-Point Protocol (PPP). Dieses Protokoll wurde als Ersatz f\"ur fr\"uhere Einwahlprotokolle entwickelt. Heutzutage findet es seine Hauptanwendung beim Einw\"ahlen via DSL. Neben der technischen Umsetzung und Spezifikation wird in dieser Arbeit auch ein m\"oglicher Verbindugsaufbau via PPP gezeigt.
+Diese Arbeit behandelt das Thema Point-to-Point Protocol (PPP). Dieses Protokoll wurde als Ersatz f\"ur fr\"uhere Einwahlprotokolle entwickelt. Heutzutage findet es seine Hauptanwendung beim Einw\"ahlen via DSL (Digital Subscriber Line). Neben der technischen Umsetzung und Spezifikation wird in dieser Arbeit auch ein m\"oglicher Verbindugsaufbau via PPP gezeigt.
 \end{abstract} 
 \begin{IEEEkeywords} 
 PPP, PPPoE, PPPoA, Point-to-Point.
 \end{IEEEkeywords}
 \section{Einleitung} 
-\IEEEPARstart{D}{as} Point-to-Point Protocol wurde urspr\"unglich im Jahr 1994 von W. Simpson entwickelt. Im OSI-Modell ist es zusammen mit anderen Protokollen in der Sicherungsschicht (engl. Data Link layer) daf\"ur zust\"andig eine direkte Verbindung zwischen zwei Clients \"uber ein leitungsvermittelndes Netz herzustellen. F\"ur diesen Zweck werden auch M\"oglichkeiten der Authentifizierung spezifiziert \cite{RFC1661}. Ebenfalls besteht die M\"oglichkeit die Daten zu verschl\"usseln oder zu komprimieren. Die Protokolle der OSI-Netzwerkschicht k\"onnen dann die bestehende PPP-Verbindung zur \"Ubermittlung von Daten nutzen. Eine PPP-Verbindung (beispielsweise zwischen Internet Service Providern, Routern, Hosts oder Netzwerkbr\"ucken) ist eine Full-Duplex Verbindung und versucht die zu \"ubermittelnden Pakete in der richtigen Reihenfolge zu \"ubertragen.\\
-Die Notwendigkeit dieses Protokolls war zu dieser Zeit sehr hoch, da \"altere Standards, wie beispielsweise SLIP, nicht mehr zeitgem\"a\ss{} waren. Ebenfalls wurde der Telefonstandard "Link Access Protocol, Balanced", welcher in der X.25-Protokollfamilie benutzt wurde, durch PPP ersetzt.  Speziell f\"ur die Internetverbindung f\"ur Heimanwender wurde f\"ur den alten ISDN-Standard ein Ersatz erschaffen. Eine Eigenschaft des Point-to-Point Protokolls ist es, f\"ur andere Protokolle der Netzwerkschicht leicht zu bedienen und zu nutzen zu sein. Mit den beiden Unterprotokollen PPPoE (Point-to-Point over Ethernet)\cite{RFC2516} und PPPoA (Point-to-Point over ATM)\cite{RFC2364} kann man sich nun mithilfe eines Routers direkt mit dem Provider verbinden, was h\"ohere Datenraten zul\"asst. Dabei bleibt aber weiterhin der Vorteil (welcher zum Beispiel bei ISDN vorhanden ist), dass man zeitgebundene Tarife f\"ur die Endkunden anbieten und abrechnen kann. Bei heutigen DSL-Anschl\"ussen besitzt man zwar eine dauerhafte physikalische Verbindung zum Provider, doch erst mit dem Aufbau der PPP-Verbindung ist man auch virtuell mit dem Provider verbunden und kann somit das Internet nutzen. Nicht nur f\"ur heimische Internet-Anschl\"usse wird PPP genutzt, sondern in allen Netzwerkverbindungen, in welchen man sich erst einw\"ahlen muss. Dazu geh\"ort auch das Mobilfunktnetz oder auch die Einwahl \"uber eine ISDN-Verbindung.\\
+\IEEEPARstart{D}{as} Point-to-Point Protocol wurde urspr\"unglich im Jahr 1994 von W. Simpson entwickelt. Im OSI (Open Systems Interconnection)-Modell ist es zusammen mit anderen Protokollen in der Sicherungsschicht (engl. Data Link layer) daf\"ur zust\"andig eine direkte Verbindung zwischen zwei Clients \"uber ein leitungsvermittelndes Netz herzustellen. F\"ur diesen Zweck werden auch M\"oglichkeiten der Authentifizierung spezifiziert \cite{RFC1661}. Ebenfalls besteht die M\"oglichkeit die Daten zu verschl\"usseln oder zu komprimieren. Die Protokolle der OSI-Netzwerkschicht k\"onnen dann die bestehende PPP-Verbindung zur \"Ubermittlung von Daten nutzen. Eine PPP-Verbindung (beispielsweise zwischen Internet Service Providern, Routern, Hosts oder Netzwerkbr\"ucken) ist eine Full-Duplex Verbindung und versucht die zu \"ubermittelnden Pakete in der richtigen Reihenfolge zu \"ubertragen.\\
+Die Notwendigkeit dieses Protokolls war zu dieser Zeit sehr hoch, da \"altere Standards, wie beispielsweise SLIP (Serial Line Internet Protocol), nicht mehr zeitgem\"a\ss{} waren. Ebenfalls wurde der Telefonstandard "Link Access Protocol, Balanced", welcher in der X.25-Protokollfamilie benutzt wurde, durch PPP ersetzt.  Speziell f\"ur die Internetverbindung f\"ur Heimanwender wurde f\"ur den alten ISDN (Integrated Services Digital Network)-Standard ein Ersatz erschaffen. Eine Eigenschaft des Point-to-Point Protokolls ist es, f\"ur andere Protokolle der Netzwerkschicht leicht zu bedienen und zu nutzen zu sein. Mit den beiden Unterprotokollen PPPoE (Point-to-Point over Ethernet)\cite{RFC2516} und PPPoA (Point-to-Point over ATM)\cite{RFC2364} kann man sich nun mithilfe eines Routers direkt mit dem Provider verbinden, was h\"ohere Datenraten zul\"asst. Dabei bleibt aber weiterhin der Vorteil (welcher zum Beispiel bei ISDN vorhanden ist), dass man zeitgebundene Tarife f\"ur die Endkunden anbieten und abrechnen kann. Bei heutigen DSL-Anschl\"ussen besitzt man zwar eine dauerhafte physikalische Verbindung zum Provider, doch erst mit dem Aufbau der PPP-Verbindung ist man auch virtuell mit dem Provider verbunden und kann somit das Internet nutzen. Nicht nur f\"ur heimische Internet-Anschl\"usse wird PPP genutzt, sondern in allen Netzwerkverbindungen, in welchen man sich erst einw\"ahlen muss. Dazu geh\"ort auch das Mobilfunktnetz oder auch die Einwahl \"uber eine ISDN-Verbindung.\\
 In folgendem Bild (siehe Bild \ref{fig:PPP-Visualisierung}) wird gezeigt f\"ur welchen Zweck das PPP-Protokoll bei DSL-Zug\"angen genutzt wird. Dabei stellt der heimische Router eine dauerhafte virtuelle Verbindung zu der Gegenstelle des Providers her, welche (aktuell in Deutschland so geregelt) im Normalfall alle 24~Stunden neu aufgebaut wird, da dann die Verbindung seitens des Anbieters automatisch getrennt wird. \\
 \begin{figure}[h!]
  \centering
   \includegraphics[width=0.5\textwidth]{img/PPP-Visualisierung}
- \caption{Darstellung einer PPP-Verbindung zwischen Heimanwender und ISP (Entnommen aus \cite{PPP-Bild})}
+ \caption{Darstellung einer PPP-Verbindung zwischen Heimanwender und ISP (Internet Service Provider) (Entnommen aus \cite{PPP-Bild})}
  \label{fig:PPP-Visualisierung}
 \end{figure}
 Neben DSL-Anschl\"ussen gibt es in Deutschland die Alternative des Kabelanschlusses. Bei Kabelanschl\"ussen wird nicht das PPP-Protokoll zum Aufbau einer Verbindung genutzt, sondern das DOCSIS-Protokoll zusammen mit einer DHCP-\"ahnlichen \cite{RFC3256} Funktionsweise. \\
@@ -81,7 +81,7 @@ Im Folgenden wird der detaillierte Aufbau eines PPP-Rahmens erläutert (siehe Ab
 Das 1. Byte stellt dabei das sogenannte \textit{Flagbyte} dar, welches den Anfang und das Ende des Rahmens kennzeichnet und immer aus den Bits \texttt{01111110} (hexadezimal \texttt{0x7E}) besteht. Sollte im Payload die selbe Bitfolge vorkommen, wird diese vor dem Versand ``escaped'', also markiert und umgewandelt (auch Bytestopfen genannt). Hierfür wird diesem Byte ein weiteres Escapebyte vorangestellt (\texttt{0x7D}) und anschließend das Eigentliche mit \texttt{0x20} XOR-verknüpft. Somit wird aus dem Flagbyte im Payload \texttt{0x7D 0x5E}. Mithilfe des Escaping kann einfach nach Anfang und Ende des Rahmens gesucht werden. Beim Auslesen wird nach dem Flagbyte \texttt{0x7D} gesucht, selbiges bei Fund gelöscht und das nachfolgende wieder mit \texttt{0x20} XOR-verknüpft. Zwischen zwei Rahmen wird nur ein Flagbyte benötigt um beide abzugrenzen.\\
 Das 2. Byte ist das \textit{Addressbyte}, das immer auf \texttt{11111111} gesetzt ist um an allen Stationen durchgelassen zu werden. Ähnlich einem IP-Broadcast muss somit keine spezifische Adresse zugewiesen werden.\\
 Nach dem \textit{Addressbyte} folgt das \textit{Controlbyte}, welches immer mit \texttt{00000011} gesetzt ist, um anzugeben, dass der Rahmen unnummeriert ist. Bei schlechten Verbindungen mit Verlusten, wie z.\,B. drahtlosen Netzwerken, sollte die Rahmennummerierung aktiviert werden. Da \textit{Addressbyte} und \textit{Controlbyte} meist konstant sind, können Teilnehmer aushandeln die beiden Bytes nicht zu nutzen, letztlich also den Overhead der Rahmen zu vermindern.\\
-Das folgende Feld bezeichnet das Protokoll des sich im Payload befindenden Paket. Bitfolgen, die mit einer 1 beginnen (ab \texttt{0x8000}), werden für PPP-Verbindungsprotokolle verwendet (z.\,B. LCP, NCP). Bitfolgen beginnend mit einer 0 bezeichnen Protokolle der Vermittlungsschicht (Schicht 3): IPv4/IPv6, aber auch z.\,B. IPX oder Appletalk. Das Feld ist standardmäßig 2 Byte groß, kann aber per LCP auch auf 1 Byte heruntergesetzt werden.\\
+Das folgende Feld bezeichnet das Protokoll des sich im Payload befindenden Paket. Bitfolgen, die mit einer 1 beginnen (ab \texttt{0x8000}), werden für PPP-Verbindungsprotokolle verwendet (z.\,B. LCP (Link Control Protocol), NCP (NetWare Core Protocol)). Bitfolgen beginnend mit einer 0 bezeichnen Protokolle der Vermittlungsschicht (Schicht 3): IPv4/IPv6, aber auch z.\,B. IPX oder Appletalk. Das Feld ist standardmäßig 2 Byte groß, kann aber per LCP auch auf 1 Byte heruntergesetzt werden.\\
 Der Payload beinhaltet die eigentlichen Daten, also Pakete anderer Protokolle. Seine Länge beträgt standardmäßig 1500~Byte, kann aber auch per LCP auf eine andere Größe vereinbart werden. Sind die zu übertragenen Daten kleiner als die definierte Payload-Größe, so kann mittels Padding aufgefüllt werden.
 %TODO Beispielwerte für Protokolle?
 Nach dem Payload folgt eine Checksumme (CRC), die über die Felder Address, Control, Protokoll und den Payload berechnet wird. Das Feld der Checksumme ist standardmäßig 2 Byte groß, kann aber auch auf 4 Byte verhandelt werden (CRC32). Durch diese Checksumme können Übertragungsfehler effektiv entdeckt werden.
@@ -98,7 +98,7 @@ Neben IPCP gibt es weitere NPCs für andere Protokolle der Vermittlungsschicht, 
 Das PPP eignet sich für die Übertragung über eine Vielzahl an Physical Layer Protokollen.
 Hierzu zählen unter anderem  Synchronous Optical Network (SONET), GPRS-/UMTS oder auch
 in Verbindung mit Ethernet über die weit verbeitete PPPoE-Variante für die Übertragung
-über Direct Subscriber Line (DSL) Anschlüsse\cite{IEEEhowto:kopka}.
+über DSL Anschlüsse\cite{IEEEhowto:kopka}.
 An dieser Stelle wird exemplarisch der Kommunikationsablauf anhand von PPPoE aufgezeigt.
 \subsection{PPP over Ethernet}
 Das PPPoE Protokoll ist in RFC 2516 spezifiziert und wurde ursprünglich
@@ -114,7 +114,7 @@ ersetzt. Mit PPPoE war es einerseits möglich die bis dahin bestehenden Software
 mit minimalen Anpassungen weiter zu verwenden und ließ sich andererseits mit einfacher
 und damit günstiger Hardware umsetzen\cite{dslapp}.
 Eines der Haupteinsatzgebiete von PPPoE sind somit Breitbandzugänge über DSL-Anschlüsse,
-Wireless-Zugänge oder Kabelmodems. Von vielen Internet Service Providern (ISP) wird es auch f\"ur diesen Zweck eingesetzt \cite[p.88]{cisconut}.\\
+Wireless-Zugänge oder Kabelmodems. Von vielen ISPs wird es auch f\"ur diesen Zweck eingesetzt \cite[p.88]{cisconut}.\\
 %
 Der strukturelle Aufbau eines typischen PPPoE-Pakets ist in Abbildung \ref{fig:PPPoE_Bild} zu sehen.
 \begin{figure}[h!]
@@ -228,7 +228,7 @@ von PPP lassen sich zunächst wie folgt zusammenfassen (vgl. \cite{ppp_slip_uniw
 \item \textbf{Software-Flußkontrolle:} Bei Aushandlung der Steuerzeichen über LCP kann PPP auch auf Datenübertragungseinrichtungen verwendet werden, die mit Software-Flußkontrolle (XON/XOFF) arbeiten -- z.B. zwischen Modem und Computer. SLIP unterstützt dies nicht.
 \item \textbf{Vereinfachung der Authentifizierung:} Bei identischem Authentisierungsverfahren beider Kommunikationspartner entfällt im allgemeinen die manuelle bzw. skriptgestützte Identifizierung beim Kommunikationspartner, was in vielen Fällen auch die Verwendung von Skripts überflüssig macht. SLIP unterstützt dies nicht.
 \item \textbf{Automatisches Aushandeln einer IP-Adresse:} PPP -- genauer IPCP -- unterstützt von sich aus das automatische Aushandeln einer dynamisch zugewiesenen IP-Adresse, im Gegensatz zu SLIP.
-\item \textbf{Aushalndung der Kompression:} Die Kommunikationspartner handeln mittels IPCP aus, ob Van-Jacobson-Header-Compression verwendet werden soll. Im Fall von SLIP muss der Kommunikationspartner wissen, ob das Verfahren unterstützt wird oder nicht und die Software entsprechend konfigurieren.
+\item \textbf{Aushandlung der Kompression:} Die Kommunikationspartner handeln mittels IPCP aus, ob Van-Jacobson-Header-Compression verwendet werden soll. Im Fall von SLIP muss der Kommunikationspartner wissen, ob das Verfahren unterstützt wird oder nicht und die Software entsprechend konfigurieren.
 \end{itemize}
 %
 Neben den Vorteilen existieren allerdings auch die folgenden Nachteile (vgl. \cite{ppp_slip_uniwi}):
@@ -247,7 +247,6 @@ Wie in der Einf\"uhrung erw\"ahnt, war das Point-to-Point Protocol notwendig, da
 \ifCLASSOPTIONcaptionsoff 
   \newpage 
 \fi
-\newpage
 \begin{thebibliography}{1} 
 \bibitem{IEEEhowto:kopka} 
 H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus 
